# FP-A-Platform

./: .gitignore  RESUME_HFT_PROJECTS.md  RESUME_SYSTEM_DESIGN.md  docker-compose.yml  generate_assignment2_data.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  setup.sql
backend/app/: config.py  database.py  dependencies.py  logger.py  main.py  security.py
backend/app/agents/: budget_agent.py  capital_agent.py  expense_agent.py  initiative_agent.py  kpi_agent.py  orchestrator_agent.py  reporting_agent.py  revenue_agent.py  scenario_agent.py  variance_agent.py
backend/app/api/: agents.py  auth.py  companies.py  drivers.py  emails.py  financials.py  initiatives.py  kpis.py  orchestrator.py  platform.py  portfolio.py  reports.py  scenarios.py  variances.py
backend/app/connectors/: __init__.py  base.py  csv_connector.py  erp_mock_connector.py  google_sheets_connector.py  postgres_connector.py  s3_connector.py
backend/app/evals/: __init__.py  agent_eval.py  eval_runner.py  forecast_eval.py  report_eval.py  variance_eval.py
backend/app/mcp_server/: __init__.py  server.py  tools.py
backend/app/ml/: __init__.py  forecasting_service.py  xgboost_forecaster.py
backend/app/models/: __init__.py  advanced.py  company.py  driver.py  financials.py  initiative.py  kpi.py
backend/app/pipelines/: README.md  __init__.py  apache_beam_pipeline.py  beam_pipeline.py  extract.py  load.py  quality_checks.py  spark_pipeline.py  transform.py
backend/assignment2_data/: README.md
backend/scripts/: seed_data.py
frontend/: .env.example  (+5 more)
(+68 files in other folders)
