[tool.poetry]
name = "fpa-platform"
version = "1.0"
description = "Backend API for FPA Platform"
authors = ["Umesh Chandra [youremail@example.com](mailto:youremail@example.com)"]

[tool.poetry.dependencies]

python = "^3.11"

fastapi = "^0.110"

uvicorn = "^0.27"
gunicorn = "^21.2.0"

sqlalchemy = "^2.0"

psycopg2-binary = "^2.9"

redis = "^5.0"

celery = "^5.3"

prophet = "^1.1"

pandas = "^2.2"

numpy = "^1.26"
numpy-financial = "^1.0"

apscheduler = "^3.10"

sendgrid = "^6.11"

reportlab = "^4.1"

agno = "*"

jinja2 = "^3.1"

pydantic = "^2.12"
pydantic-settings = "^2.0"

python-dotenv = "^1.0"

scikit-learn = "^1.3"

websockets = "^11.0"

groq = "^0.11.0"
httpx = "0.27.0"
xgboost = "^2.1.0"
locust = "^2.32.0"
